crates/wgso/tests/cases_invalid/missing_uniform_param/.expected
error: missing uniform argument `value`
 --> ./tests/cases_invalid/missing_uniform_param/compute_shader.wgsl:2:6
  |
2 | #run test()
  |      ^^^^
  |